--- a/src/partials/amenities.html
+++ b/src/partials/amenities.html
@@ -2,7 +2,7 @@
 <section class="amenities">
   <div class="container">
     <h2 class="amenities-title">ЗРУЧНОСТІ У НОМЕРІ</h2>
-    <p class="amenities-text">
+    <p class="amenities-text-title">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
       Velit officia consequat duis enim velit mollit. Exercitation veniam
       consequat sunt nostrud amet.
@@ -10,29 +10,33 @@
     <ul class="amenities-list">
       <li class="amenities-item">
         <h3 class="amenities-item-title">ЗАГАЛЬНІ</h3>
-        <p class="amenities-text">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-          sint. Velit officia consequat duis enim velit mollit. Exercitation
-          veniam consequat sunt nostrud amet.
-        </p>
-        <p class="amenities-text-item">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-          sint. Velit officia consequat duis enim velit mollit. Exercitation
-          veniam consequat sunt nostrud amet.
-        </p>
+        <div class="amenities-item-text">
+          <p class="amenities-text">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <p class="amenities-text-item">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+        </div>
       </li>
       <li class="amenities-item">
         <h3 class="amenities-item-title">ВАННА КІМНАТА</h3>
-        <p class="amenities-text">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-          sint. Velit officia consequat duis enim velit mollit. Exercitation
-          veniam consequat sunt nostrud amet.
-        </p>
-        <p class="amenities-text-item">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-          sint. Velit officia consequat duis enim velit mollit. Exercitation
-          veniam consequat sunt nostrud amet.
-        </p>
+        <div class="amenities-item-text">
+          <p class="amenities-text">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+          <p class="amenities-text-item">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+        </div>
       </li>
       <li class="amenities-item">
         <h3 class="amenities-item-title">СПАЛЬНЯ</h3>
@@ -43,14 +47,16 @@
       </li>
       <li class="amenities-item">
         <h3 class="amenities-item-title">КУХНЯ</h3>
-        <p class="amenities-text">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-          sint.
-        </p>
-        <p class="amenities-text-item">
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-          sint.
-        </p>
+        <div class="amenities-item-text">
+          <p class="amenities-text">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint.
+          </p>
+          <p class="amenities-text-item">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint.
+          </p>
+        </div>
       </li>
       <li class="amenities-item">
         <h3 class="amenities-item-title">МЕДІА</h3>
@@ -61,11 +67,13 @@
       </li>
     </ul>
     <button type="button" class="amenities-button">ОФОРМИТИ БРОНЮВАННЯ</button>
-    <a class="amenities-link" href="/src/hotel.html"
-      >Повернутися до перегляду номерів</a
-    >
-    <svg class="amenities-icon" width="24" height="24">
-      <use href="./img/icons.svg#arrow-right"></use>
-    </svg>
+    <div class="amenities-link-room">
+      <a class="amenities-link" href="/src/hotel.html"
+        >Повернутися до перегляду номерів</a
+      >
+      <svg class="amenities-icon" width="24" height="24">
+        <use href="./img/icons.svg#arrow-right"></use>
+      </svg>
+    </div>
   </div>
 </section>
