--- a/src/partials/modalprice.html
+++ b/src/partials/modalprice.html
@@ -1,1 +1,60 @@
 <!-- ----------Room Price Modal window---------- -->
+
+<section class="price-modal backdrop">
+  <div class="modal-container price-modal-wrap">
+    <button type="button" class="modal-close" data-book-room-modal-close>
+      <svg class="modal-close-icon" width="24" height="24">
+        <use href="../img/icons.svg#modal-close"></use>
+      </svg>
+    </button>
+
+    <h2 class="modal-title">ЦІНИ НА НОМЕР</h2>
+
+    <form class="modal-form">
+      <div class="price-room-type">
+        <h3 class="room-type-title">Двомісний люкс</h3>
+        <p class="room-type-text">Категорія номеру</p>
+      </div>
+
+      <div class="price-room-wrap">
+        <div class="modal-field">
+          <div class="select-wrap">
+            <select
+              class="modal-input"
+              name="price-night-quantity"
+              id="price-night-quantity"
+            >
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>7</option>
+              <option>14</option>
+            </select>
+          </div>
+
+          <label for="price-night-quantity" class="modal-input-label"
+            >Кількість ночей</label
+          >
+        </div>
+
+        <div class="modal-field">
+          <input
+            type="text"
+            class="modal-input"
+            name="price-room-cost"
+            id="price-room-cost"
+            value="1000"
+            readonly
+          />
+          <label for="price-room-cost" class="modal-input-label">грн</label>
+        </div>
+      </div>
+
+      <div class="modal-submit">
+        <button type="submit" class="modal-btn">ЗАБРОНЮВАТИ НОМЕР</button>
+      </div>
+    </form>
+  </div>
+</section>
