--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -103,7 +103,10 @@ body {
   color: var(--second-gold-color);
 }
 .header-box {
+}
+.header-tel-link {
   display: flex;
+  align-items: center;
 }
 .header-icon {
   fill: var(--second-gold-color);
@@ -128,6 +131,66 @@ body {
 .header-social-icon {
 }
 
+/* -----------Footer----------- */
+
+.footer > .container {
+  display: flex;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  align-items: center;
+  justify-content: center;
+}
+.footer {
+  background: #0e0c07;
+}
+.footer-logo {
+  font-family: 'Film P3';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.07;
+  letter-spacing: 0.3em;
+  color: var(--second-gold-color);
+  margin-right: auto;
+}
+.footer-box {
+}
+.footer-nav-list {
+}
+.footer-nav-item {
+}
+.footer-nav-item:not(:last-child) {
+  margin-bottom: 16px;
+}
+.footer-nav-link {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--second-gold-color);
+}
+.footer-social-list {
+  display: flex;
+  gap: 20px;
+  margin-top: 32px;
+}
+.footer-social-item {
+}
+.footer-social-link {
+}
+.footer-social-text {
+  display: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: var(--second-gold-color);
+}
+.footer-social-icon {
+}
+
 @media screen and (min-width: 414px) {
   .header-logo {
     margin-right: 52px;
@@ -137,6 +200,14 @@ body {
   }
   .header-item:nth-child(2) {
     margin-right: 20px;
+  }
+  .footer > .container {
+    width: 414px;
+    padding-left: 59px;
+    padding-right: 30px;
+  }
+  .footer-logo {
+    margin-right: 85px;
   }
 }
 
@@ -161,14 +232,51 @@ body {
     font-size: 20px;
     line-height: 1.2;
   }
+  .header-tel-link {
+    padding: 7px;
+  }
   .header-tel {
     display: block;
   }
   .header-box {
-    padding: 8px;
-    align-items: center;
     border: 1px solid rgba(243, 198, 83, 0.7);
     border-radius: 2px;
+  }
+  .footer {
+    background: #000000;
+  }
+  .footer-logo {
+    font-size: 64px;
+    line-height: 1.07;
+    margin-right: 163px;
+  }
+  .footer-box {
+    display: flex;
+    align-items: start;
+  }
+  .footer-social-list {
+    display: block;
+    margin-top: 0;
+    margin-left: 137px;
+  }
+  .footer-social-item {
+    display: flex;
+    align-items: center;
+    gap: 18px;
+    border: 0.5px solid var(--second-gold-color);
+    border-radius: 2px;
+  }
+  .footer-social-item:not(:last-child) {
+    margin-bottom: 12px;
+  }
+  .footer-social-link {
+    display: flex;
+    align-items: center;
+    padding: 8px 12px;
+  }
+  .footer-social-text {
+    display: block;
+    margin-right: 18px;
   }
 }
 
@@ -192,6 +300,14 @@ body {
     margin-left: 140px;
     gap: 20px;
   }
+  .footer {
+    background: #0e0c07;
+  }
+  .footer > .container {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .footer-logo {
+    margin-right: 231px;
+  }
 }
-
-/* -----------Header----------- */
