--- a/src/css/detailsrest.css
+++ b/src/css/detailsrest.css
@@ -5,7 +5,6 @@
   padding-bottom: 40px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
     url(../img/rest_details_bg_mob_1x.jpg);
-  background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
@@ -55,8 +54,8 @@
   justify-content: space-between;
   column-gap: 15px;
   margin-bottom: 24px;
-  margin-left: 25px;
   margin-right: -15px;
+  margin-left: 25px;
 }
 
 .rest-details-arrows {
@@ -107,4 +106,109 @@
   border-color: var(--second-gold-color);
 }
 
+/* --------------Mobile---------------- */
+
+@media screen and (max-width: 1023.5px) {
+  .mob-hidden-img {
+    display: none;
+  }
+}
+
 /* --------------Tablet---------------- */
+
+@media screen and (min-width: 1024px) {
+  .rest-details {
+    padding-top: 48px;
+    padding-bottom: 47px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+      url(../img/rest_details_bg_tab_1x.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .rest-details {
+      background-image: linear-gradient(
+          rgba(0, 0, 0, 0.65),
+          rgba(0, 0, 0, 0.65)
+        ),
+        url(../img/rest_details_bg_tab_2x.jpg);
+    }
+  }
+
+  .rest-details > .container {
+    padding-left: 47px;
+    padding-right: 47px;
+    position: relative;
+  }
+
+  .rest-details-textwrap {
+    margin-left: 231px;
+    margin-right: 99px;
+    margin-bottom: 40px;
+  }
+
+  .rest-details-uppertext {
+    margin-bottom: 16px;
+    font-size: 64px;
+  }
+
+  .rest-details-title {
+    margin-bottom: 8px;
+    font-size: 24px;
+  }
+
+  .rest-details-lowertext {
+    font-size: 16px;
+  }
+
+  .rest-details-list {
+    justify-content: space-between;
+    column-gap: 35px;
+    margin-bottom: 32px;
+    margin-right: 0;
+    margin-left: 266px;
+  }
+
+  .rest-details-arrows {
+    margin-left: 266px;
+    margin-bottom: 0;
+  }
+
+  .rest-details-btnwrap {
+    position: absolute;
+    transform: translateY(-176px);
+  }
+}
+
+/* --------------Desktop---------------- */
+
+@media screen and (min-width: 1280px) {
+  .rest-details {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+      url(../img/rest_details_bg_desk_1x.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .rest-details {
+      background-image: linear-gradient(
+          rgba(0, 0, 0, 0.65),
+          rgba(0, 0, 0, 0.65)
+        ),
+        url(../img/rest_details_bg_desk_2x.jpg);
+    }
+  }
+
+  .rest-details > .container {
+    padding-left: 85px;
+    padding-right: 52px;
+  }
+
+  .rest-details-textwrap {
+    margin-left: 253px;
+    margin-right: 280px;
+    margin-bottom: 40px;
+  }
+}
