--- a/src/partials/detailsrest.html
+++ b/src/partials/detailsrest.html
@@ -29,7 +29,7 @@
               ../img/rest_details_2_mob_1x.jpg 1x,
               ../img/rest_details_2_mob_2x.jpg 2x
             "
-            media="(max-width: 1023px)"
+            media="(max-width: 1023.5px)"
           />
           <source
             srcset="
@@ -41,7 +41,7 @@
           <img src="../img/rest_details_2_1x.jpg" height="270" alt="Shashlyk" />
         </picture>
       </li>
-      <li class="rest-details-item visually-hidden">
+      <li class="rest-details-item mob-hidden-img">
         <picture>
           <source
             srcset="
