--- a/src/partials/hero3.html
+++ b/src/partials/hero3.html
@@ -20,21 +20,23 @@
         </div>
         <ul class="soc-list">
             <li class="soc-item">
-                <a href="" class="soc-link">
+                <a href="https://www.instagram.com/mimino.poltava/" class="soc-link" target="_blank" rel=”noopener
+                    noreferrer”>
                     <svg class="soc-icon" width="24" height="24">
                         <use href="../img/icons.svg#instagram"></use>
                     </svg>
                 </a>
             </li>
             <li class="soc-item">
-                <a href="" class="soc-link">
+                <a href="https://www.facebook.com/profile.php?id=114589595894911&paipv=0&eav=AfYgKg68kXEFofZ68qpkVFqZyVZVXsLS_P-VWnl2YwaHSe_T4W2QUmOtsdei3EzsNEU&_rdr"
+                    class="soc-link" target="_blank" rel=”noopener noreferrer”>
                     <svg class="soc-icon" width="24" height="24">
                         <use href="../img/icons.svg#facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="soc-item">
-                <a href="" class="soc-link">
+                <a href="" class="soc-link" target="_blank" rel=”noopener noreferrer”>
                     <svg class="soc-icon" width="24" height="24">
                         <use href="../img/icons.svg#telegram"></use>
                     </svg>
