Header1_first edition

--- a/src/partials/hero2.html
+++ b/src/partials/hero2.html
@@ -1,29 +1,34 @@
 <!-- ---------Restaurant Page Hero--------- -->
-<div class="overlay">
-  <section class="restaurant-hero">
+<div class="restaurant-hero-overlay">
+  <section class="first-hero">
     <div class="container">
-      <h1 class="restaurant-hero-title">MIMIHO</h1>
-      <h2 class="restaurant-hero-subtitle">Ресторан</h2>
-      <p class="restaurant-hero-text">смак життя 24/7</p>
-      <button type="button" class="hero-btn btn" data-modal-open>
-        Забронювати столик
-      </button>
-      <button type="button" class="hero-btn btn" data-modal-open>
-        Забронювати номер
-      </button>
-
-      <a
-        class="maps-link link"
-        href="https://goo.gl/maps/gUJNV8gQoXNjQtDE9"
-        target="_blank"
-        rel="noopener noreferrer nofollow"
-        ><span>
-          <svg class="location-icon" width="24" height="24">
-            <use href="../img/icons.svg#location"></use>
-          </svg> </span
-        >Україна, м. Полтава,<br />
-        вул. Маршала Бірюзова, 15</a
-      >
+      <h1 class="first-hero-title title">MIMIH<span class="accent">O</span></h1>
+      <h2 class="first-hero-subtitle">Ресторан</h2>
+      <p class="first-hero-text">смак життя 24/7</p>
+      <div class="mimiho-bottom-wrap">
+        <address class="mimiho-address">
+          <a
+            class="maps-link link"
+            href="https://goo.gl/maps/gUJNV8gQoXNjQtDE9"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+          >
+            <svg class="location-icon" width="24" height="24">
+              <use href="../img/icons.svg#location"></use>
+            </svg>
+            Україна, м. Полтава,<br />
+            вул. Маршала Бірюзова, 15</a
+          >
+        </address>
+        <div class="hero-btn-wrap">
+          <button type="button" class="hero-btn btn" data-modal-open>
+            Забронювати столик
+          </button>
+          <button type="button" class="hero-btn btn" data-modal-open>
+            Забронювати номер
+          </button>
+        </div>
+      </div>
       <div class="mimiho-soc">
         <ul class="mimiho-soc-list list">
           <li class="mimiho-soc-item">
