--- a/src/partials/hero3.html
+++ b/src/partials/hero3.html
@@ -6,7 +6,7 @@
             <h1 class="hero-title">MIMIHO</h1>
             <h2 class="hero-sub-title">Готель</h2>
             <div class="local-div">
-                <a href="" class="location">
+                <a href="https://goo.gl/maps/FUc2W3RXpUwxECnb8" class="location">
                     <svg class="location-icon" width="20" height="20">
                         <use href="../img/icons.svg#location"></use>
                     </svg>Україна, м.Полтава, <br> вул. Маршала Бірюзова, 15
