--- a/src/css/hero3.css
+++ b/src/css/hero3.css
@@ -84,6 +84,11 @@
   line-height: calc(20 / 16);
   letter-spacing: 0.02em;
   color: #f3c653;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn:hover,
+.btn:focus {
+  background-color: #ffffff;
 }
 .number-button {
   margin-bottom: 58px;
