modal open added

--- a/src/partials/detailsrest.html
+++ b/src/partials/detailsrest.html
@@ -74,7 +74,13 @@
       </svg>
     </div>
     <div class="rest-details-btnwrap">
-      <button type="button" class="rest-details-btn">Забронювати столик</button>
+      <button
+        type="button"
+        class="rest-details-btn js-open-modal"
+        data-modal="modaltable"
+      >
+        Забронювати столик
+      </button>
       <button type="button" class="rest-details-btn">
         <a class="check-menu-link" href="../restaurant.html">
           Переглянути меню
