--- a/src/partials/modalroom.html
+++ b/src/partials/modalroom.html
@@ -1,8 +1,8 @@
 <!-- ---------Book Room Modal window--------- -->
 
-<section class="book-room-modal backdrop">
+<section class="book-room-modal modal" data-modal="modalroom">
   <div class="modal-container book-room">
-    <button type="button" class="modal-close" data-book-room-modal-close>
+    <button type="button" class="modal-close js-modal-close">
       <svg class="modal-close-icon" width="24" height="24">
         <use href="../img/icons.svg#modal-close"></use>
       </svg>
