--- a/src/partials/modaltable.html
+++ b/src/partials/modaltable.html
@@ -1,7 +1,7 @@
 <!-- ------------Book Table Modal window------------ -->
-<section class="book-table-modal backdrop">
+<section class="book-table-modal modal" data-modal="modaltable">
   <div class="modal-container book-table">
-    <button type="button" class="modal-close" data-book-room-modal-close>
+    <button type="button" class="modal-close js-modal-close">
       <svg class="modal-close-icon" width="24" height="24">
         <use href="../img/icons.svg#modal-close"></use>
       </svg>
