--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,8 +1,44 @@
 /* <!-- ---------- Modal ---------- --> */
-.is-hidden {
+
+.modal-overlay {
+  /* Скрываем подложку  */
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: opacity var(--timing-function), visibility var(--timing-function);
+}
+
+/* Стили для модальных окон */
+
+.modal {
+  /* Скрываем окна  */
+  opacity: 0;
+  visibility: hidden;
+
+  /*  Установаем ширину окна  */
+  width: 100%;
+  /*  Центрируем и задаем z-index */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 30; /* Должен быть выше чем у подложки*/
+}
+
+/* Стили для активных классов подложки и окна */
+
+.modal.active,
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
 }
 
 select {
@@ -139,6 +175,82 @@ select {
   border-color: var(--second-gold-color);
 }
 
+/* ---------------BOOK ROOM---------------- */
+
+.book-room-user-contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+.book-room-user-contacts .modal-input:first-child {
+  border-radius: 2px;
+}
+
+.book-room-dates {
+  display: flex;
+  flex-direction: column;
+  gap: 17px;
+  margin-bottom: 40px;
+}
+
+.room-type {
+  margin-bottom: 20px;
+}
+
+/* ---------------PRICE---------------- */
+
+.room-type-title {
+  font-family: 'Times New Roman', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: calc(28 / 24);
+
+  letter-spacing: 0.05em;
+  color: #808080;
+  margin-bottom: 28px;
+}
+
+.room-type-text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: calc(20 / 16);
+
+  letter-spacing: 0.02em;
+  color: var(--first-gold-color);
+
+  margin-bottom: 20px;
+}
+
+.price-room-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: auto;
+  margin-bottom: 40px;
+}
+
+.price-room-wrap > .modal-input {
+  font-size: 24px;
+  line-height: calc(28 / 24);
+}
+
+/* ---------------TABLE---------------- */
+.book-table-wrap {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  margin-bottom: 40px;
+}
+
+.book-table-wrap > .modal-field:nth-child(odd) .modal-input {
+  border-radius: 2px;
+}
+
 @media screen and (min-width: 414px) {
   .modal-container {
     position: absolute;
@@ -148,7 +260,7 @@ select {
     transform: translate(-50%, -50%) scale(1);
     transition: transform var(--timing-function);
   }
- 
+
   .book-room {
     height: 780px;
   }
@@ -157,7 +269,7 @@ select {
     height: 572px;
   }
 
- .book-table {
+  .book-table {
     height: 668px;
   }
 }
@@ -229,11 +341,11 @@ select {
   }
 
   .book-room-user-contacts > .modal-field {
-    width: calc((100%-16px) / 2);
+    width: calc((100% - 16px) / 2);
   }
 
   .book-room-dates > .modal-field {
-    width: calc((100%-16px) / 2);
+    width: calc((100% - 16px) / 2);
   }
 
   /* ---------------PRICE---------------- */
@@ -258,7 +370,7 @@ select {
   }
 
   .price-room-wrap > .modal-field {
-    width: calc((100%-16px) / 2);
+    width: calc((100% - 16px) / 2);
   }
 
   /* ---------------TABLE---------------- */
@@ -267,15 +379,13 @@ select {
     height: 522px;
   }
   .book-table-wrap {
-    /* display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-bottom: 40px; */
+    column-gap: 16px;
     flex-wrap: wrap;
     height: 212px;
   }
 
   .book-table-wrap > .modal-field {
-    width: calc((100%-16px) / 2);
+    height: calc((100% - 20px) / 2);
+    width: calc((100% - 16px) / 2);
   }
 }
