--- a/src/partials/modalprice.html
+++ b/src/partials/modalprice.html
@@ -1,8 +1,8 @@
 <!-- ----------Room Price Modal window---------- -->
 
-<section class="price-modal backdrop">
+<section class="price-modal modal" data-modal="modalprice">
   <div class="modal-container price-modal-wrap">
-    <button type="button" class="modal-close" data-book-room-modal-close>
+    <button type="button" class="modal-close js-modal-close">
       <svg class="modal-close-icon" width="24" height="24">
         <use href="../img/icons.svg#modal-close"></use>
       </svg>
