Connected Modal windows

--- a/src/partials/hero1.html
+++ b/src/partials/hero1.html
@@ -20,10 +20,18 @@
         >
       </address>
       <div class="hero-btn-wrap">
-        <button type="button" class="hero-btn btn" data-modal-open>
+        <button
+          type="button"
+          class="hero-btn btn js-open-modal"
+          data-modal="modaltable"
+        >
           Забронювати столик
         </button>
-        <button type="button" class="hero-btn btn" data-modal-open>
+        <button
+          type="button"
+          class="hero-btn btn js-open-modal"
+          data-modal="modalroom"
+        >
           Забронювати номер
         </button>
       </div>
