--- a/src/partials/hero2.html
+++ b/src/partials/hero2.html
@@ -20,20 +20,20 @@
             вул. Маршала Бірюзова, 15</a
           >
         </address>
-        <div class="hero-btn-wrap">
+        <div class="hero-button-wrap">
           <button
             type="button"
-            class="hero-btn btn js-open-modal"
+            class="hero-button button js-open-modal"
             data-modal="modaltable"
           >
             Забронювати столик
           </button>
           <button
             type="button"
-            class="hero-btn btn js-open-modal"
-            data-modal="modalroom"
+            class="hero-button button js-open-modal"
+            data-modal="modalprice"
           >
-            Забронювати номер
+            Переглянути меню
           </button>
         </div>
       </div>
