--- a/src/partials/hero4.html
+++ b/src/partials/hero4.html
@@ -1,6 +1,14 @@
 <!-- ---------Room Page Hero--------- -->
 <section class="room-hero">
   <div class="container">
+    <div class="room-hero-arrows">
+      <svg class="golden-arrows" width="40px" height="40px">
+        <use href="./img/icons.svg#arrow-left"></use>
+      </svg>
+      <svg class="golden-arrows" width="40px" height="40px">
+        <use href="./img/icons.svg#arrow-right"></use>
+      </svg>
+    </div>
     <h2 class="room-hero-title">ДВОМІСНИЙ НОМЕР люкс</h2>
     <p class="room-hero-text">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
@@ -55,6 +63,12 @@
         ></a>
       </li>
     </ul>
-    <button type="button" class="room-hero-button">Переглянути ціни</button>
+    <button
+      type="button"
+      class="room-hero-button js-open-modal"
+      data-modal="modalprice"
+    >
+      Переглянути ціни
+    </button>
   </div>
 </section>
