--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -128,6 +128,12 @@ body {
 }
 .header-social-link {
 }
+.header-social-link:hover .header-social-icon,
+.header-social-link:focus .header-social-icon {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+}
 .header-social-icon {
 }
 
