--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,9 +66,9 @@ body {
 /* -----------Header----------- */
 
 .header {
-  /* position: absolute;
+  position: absolute;
   left: 50%;
-  transform: translate(-50%) scale(1); */
+  transform: translate(-50%) scale(1);
 }
 .header > .container {
   display: flex;
@@ -86,7 +86,7 @@ body {
   font-size: 36px;
   line-height: 1.08;
   letter-spacing: 0.3em;
-  /* color: var(--primary-white-color); */
+  color: var(--primary-white-color);
 }
 .header-list {
   display: flex;
@@ -119,7 +119,7 @@ body {
   font-size: 14px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  /* color: var(--primary-white-color); */
+  color: var(--primary-white-color);
 }
 .header-social-list {
   display: none;
