--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -257,6 +257,7 @@ body {
     display: block;
   }
   .header-box {
+    width: 144px;
     border: 1px solid rgba(243, 198, 83, 0.7);
     border-radius: 2px;
   }
