--- a/src/partials/hero3.html
+++ b/src/partials/hero3.html
@@ -3,17 +3,17 @@
     <div class="container">
         <div class="center">
 
-            <h1 class="hero-title">MIMIHO</h1>
+            <h1 class="hero-title">MIMIH<span class="accent">O</span></h1>
             <h2 class="hero-sub-title">Готель</h2>
             <div class="local-div">
-                <a href="https://goo.gl/maps/FUc2W3RXpUwxECnb8" class="location">
+                <a href="https://goo.gl/maps/mcsi6WdrQmKkDymHA" class="location">
                     <svg class="location-icon" width="20" height="20">
                         <use href="../img/icons.svg#location"></use>
                     </svg>Україна, м.Полтава, <br> вул. Маршала Бірюзова, 15
                 </a>
                 <div>
-                    <button type="button" class="table-button btn">Забронювати номер</button>
-                    <button type="button" class="number-button btn">Переглянути ціни</button>
+                    <button type="button" class="table-button btn js-open-modal" data-modal="modalroom">Забронювати номер</button>
+                    <button type="button" class="number-button btn js-open-modal" data-modal="modalprice">Переглянути ціни</button>
                 </div>
             </div>
 
