--- a/src/css/hero3.css
+++ b/src/css/hero3.css
@@ -62,6 +62,9 @@
   color: #ffffff;
   margin-bottom: 32px;
 }
+.hero-title > .accent {
+  letter-spacing: 0;
+}
 .hero-sub-title {
   font-weight: 600;
   font-size: 20px;
@@ -111,6 +114,10 @@
 }
 
 @media screen and (min-width: 1024px) {
+  .hero-title{
+    font-size: 128px;
+line-height: calc(138/128);
+  }
   .hotel-page-hero {
     background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 4, 4, 0.65)),
       url(../img/hotel-hero-table1x.jpg);
