--- a/src/partials/aboutrest.html
+++ b/src/partials/aboutrest.html
@@ -1,14 +1,13 @@
 <!-- -------About our restaurant------- -->
 <section class="about-rest">
-    <div class="container">
-        <div class="about-restaurant"></div>
+    <div class="container-about-rest container">
         <h2 class="visually-hidden">About our restaurant</h2>
         <p class="about-pre-title">Amet minim mollit non</p>
         <h3 class="about-title">MIMIHO</h3>
         <p class="about-after-title">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
             Velit officia consequat duis enim velit
             mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        <div class="img">
+        <div class="img-about-rest">
             <picture>
                 <source srcset="
                                 ../img/aboutrest/restaurant-interior-desc.jpg   1x,
@@ -22,8 +21,8 @@
                                 ../img/aboutrest/restaurant-interior-mob.jpg    1x,
                                 ../img/aboutrest/restaurant-interior-mob-2x.jpg 2x
                               " media="(min-width: 320px)" />
-                <img class="border" src="../img/aboutrest/restaurant-interior-mob.jpg" alt="restaurant-interior" width="400"
-                    height="524">
+                <img class="border-one" src="../img/aboutrest/restaurant-interior-mob.jpg" alt="restaurant-interior" width=""
+                    height="">
             </picture>
 
         </div>
@@ -42,8 +41,8 @@
                         ../img/aboutrest/pexels-oruri-jacome-mob-2x.jpg 2x
                       " media="(min-width: 320px)" />
 
-                <img class="border" src="../img/aboutrest/pexels-oruri-jacome-mob.jpg" alt="pexels-oruri-jacome" width="350"
-                    height="500">
+                <img class="border-two" src="../img/aboutrest/pexels-oruri-jacome-mob.jpg" alt="pexels-oruri-jacome" width=""
+                    height="">
             </picture>
             <p class="about-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
                 officia
@@ -65,8 +64,8 @@
                                     ../img/aboutrest/pexels-helena-lopes-mob-2x.jpg 2x
                                   " media="(min-width: 320px)" />
 
-                <img class="border" src="../img/aboutrest/pexels-helena-lopes-mob.jpg" alt="pexels-helena-lopes" width="254"
-                    height="254">
+                <img class="border-three" src="../img/aboutrest/pexels-helena-lopes-mob.jpg" alt="pexels-helena-lopes" width=""
+                    height="">
             </picture>
             <picture>
                 <source srcset="
@@ -82,7 +81,7 @@
                                                 ../img/aboutrest/pexels-mat-brown-mob-2x.jpg 2x
                                               " media="(min-width: 320px)" />
 
-                <img class="border" src="../img/aboutrest/pexels-mat-brown-mob.jpg" alt="pexels-mat-brown" width="254" height="254">
+                <img class="border-four" src="../img/aboutrest/pexels-mat-brown-mob.jpg" alt="pexels-mat-brown" width="" height="">
             </picture>
         </div>
         <div class="about-arrow">
