--- a/src/css/aboutrest.css
+++ b/src/css/aboutrest.css
@@ -5,12 +5,17 @@
     background: #fffdee;
     position: relative;
 }
-.border {
+.border-one,
+.border-two,
+.border-three,
+.border-four {
     background: #DADADA;
     box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
     border-radius: 2px;
 }
 .about-pre-title {
+    font-family: 'Times New Roman';
+    font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 1.15;
@@ -39,7 +44,7 @@
 .about-restaurant {
     margin-bottom: 32px;
 }
-.img {
+.img-about-rest {
  padding-left: 155px;
  margin-bottom: 32px;
 
@@ -50,7 +55,7 @@
     margin-bottom: 32px;   
 }
 .about-text {
-    max-width: 163px;
+    width: 163px;
     font-weight: 600;
     font-size: 12px;
     line-height: 1.25;
@@ -60,17 +65,19 @@
 }
 
 .about-img {
+     position: absolute;
     display: flex;
     gap: 25px;
-    margin-left: 82px ;
-     width: 515px;
-     margin-bottom: 20px;
+    right: 0;
+  /* margin-bottom: 20px; */
+    
 }
 .about-arrow {
     display: flex ;
-    width: 98px;
     gap: 32px;
-    margin-left: 301px;
+    width: 98px;
+    margin-left: auto;
+    margin-top: 297px;
 }
 .about-icon:hover {
 fill: #F3C653;
@@ -78,28 +85,41 @@ fill: #F3C653;
 /* ------- Mob ------- */
 
 @media screen and (min-width: 320px) and (max-width: 413px) {
-  /* .about-rest {
+  .about-rest {
     width: 100%;
-  } */
-  
+  }
 }
 
 @media screen and (min-width: 414px) {
-  .container {
+  .container-about-rest {
     width: 414px;
   }
-  .img {
+  .img-about-rest {
     margin-left: 0;
+  }
+  .about-arrow {
+    margin-left: 285px;
+  }
+  .about-img {
+    left: 100px;
   }
 }
 
 /* ------- Tab --------- */
 @media screen and (min-width: 1024px) {
   .about-rest {
+    padding-top: 120px;
     padding-bottom: 32px;
+    padding-left: 47px;
   }
-  .container {
+  .container-about-rest {
     width: 1024px;
+  }
+  .border-one {
+    box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
+  }
+  .border-two {
+    box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
   }
   .about-pre-title {
     margin-bottom: 4px;
@@ -114,16 +134,14 @@ fill: #F3C653;
 
   .about-after-title {
     width: 439px;
-    margin-right: 26px;
     margin-bottom: 142px;
     font-size: 16px;
     line-height: 1.25;
   }
   .about-pexels {
-    padding-left: 47px;
     gap: 48px;
   }
-  .img {
+  .img-about-rest {
     position: absolute;
     margin: 0;
     padding: 0;
@@ -132,19 +150,23 @@ fill: #F3C653;
   }
 
   .about-text {
-   max-width: 312px;
+   width: 312px;
     margin-top: 190px;
     font-size: 16px;
     line-height: 1.25;
   }
   .about-img {
-    width: 428px;
+    position: absolute;
+    padding: 0;
     margin: 0;
-    margin-left: 536px;
-     margin-bottom: 32px;
+    top: 948px;
+    left: 536px;
   }
+
   .about-arrow {
-    margin-left: 866px;
+    margin-top: 198px;
+    /* padding-left: 790px; */
+    margin-left: 790px;
   }
 }
 
@@ -152,32 +174,35 @@ fill: #F3C653;
 @media screen and (min-width: 1280px) {
   .about-rest {
     padding-bottom: 50px;
+    padding-left: 85px;
   }
-  .container {
+  .container-about-rest {
     width: 1280px;
+  }
+  .border-two {
+     box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
   }
   .about-after-title {
     width: 518px;
-    margin-right: 37px;
     margin-bottom: 162px;
   }
    .about-text {
     margin-bottom: 119px;
   }
   .about-pexels {
-    padding-left: 85px;
     gap: 32px;
   }
-  .img {
-    top: -83px;
+  .img-about-rest {
+    top: -33px;
     left: 640px;
   }
 .about-img {
-  width: 548px;
-  margin-left: 647px;
-   margin-bottom: 36px;
+  top: 903px;
+  left: 647px;
 }
 .about-arrow {
-   margin-left: 1097px;
+  /* padding-left: 980px; */
+   margin-top: 143px;
+   margin-left: 980px;
   }
 }
