--- a/src/css/aboutkitchen.css
+++ b/src/css/aboutkitchen.css
@@ -47,7 +47,8 @@
   line-height: 1.25;
   letter-spacing: 0.02em;
 
-  color: #7a7a7a;
+  color: var(--primary-text-color);
+  /* color: #7a7a7a; */
 }
 
 .img-interrior {
