--- a/src/partials/abouthotel.html
+++ b/src/partials/abouthotel.html
@@ -1,6 +1,6 @@
 <!-- --------About our hotel-------- -->
 <section class="about-hotel">
-    <div class="container-about-hotel container">
+    <div class="container">
                 <h2 class="visually-hidden">About our restaurant</h2>
                 <div class="about-hotel-paragraph">
                     <p class="about-hotel-pre-title">Amet minim mollit non</p>
@@ -23,8 +23,7 @@
                                 ../img/abouthotel/modern-studio-apartment-mob.jpg    1x,
                                 ../img/abouthotel/modern-studio-apartment-mob-2x.jpg 2x
                               " media="(min-width: 320px)" />
-                <img class="border-hotel-one" src="../img/abouthotel/modern-studio-apartment-mob.jpg" alt="modern-studio"
-                    width="" height="">
+                <img class="border-hotel-one" src="../img/abouthotel/modern-studio-apartment-mob.jpg" alt="modern-studio">
             </picture>
 
         </div>
@@ -47,8 +46,7 @@
                         ../img/abouthotel/hotel-mob-2x.jpg 2x
                       " media="(min-width: 320px)" />
 
-                <img class="border-hotel-two" src="../img/abouthotel/hotel-mob.jpg" alt="hotel"
-                    width="" height="">
+                <img class="border-hotel-two" src="../img/abouthotel/hotel-mob.jpg" alt="hotel">
             </picture>
         </div>
         <div class="about-hotel-img">
@@ -67,8 +65,7 @@
                                                 ../img/abouthotel/white-towel-bed-mob-2x.jpg 2x
                                               " media="(min-width: 320px)" />
 
-                <img class="border-hotel-three" src="../img/abouthotel/white-towel-bed-mob.jpg" alt="white-towel-bed" width=""
-                    height="">
+                <img class="border-hotel-three" src="../img/abouthotel/white-towel-bed-mob.jpg" alt="white-towel-bed">
             </picture>
             <picture>
                 <source srcset="
@@ -84,15 +81,14 @@
                                                 ../img/abouthotel/hotel-registration-mob-2x.jpg 2x
                                               " media="(min-width: 320px)" />
             
-                <img class="border-hotel-four" src="../img/abouthotel/hotel-registration-mob.jpg" alt="hotel-registration" width=""
-                    height="">
+                <img class="border-hotel-four" src="../img/abouthotel/hotel-registration-mob.jpg" alt="hotel-registration">
             </picture>
         </div>
         <div class="about-hotel-arrow">
-            <svg class="about-icon" width="32" height="32">
+            <svg class="about-icon-hotel" width="32" height="32">
                 <use href="../img/icons.svg#arrow-left"></use>
             </svg>
-            <svg class="about-icon" width="32" height="32">
+            <svg class="about-icon-hotel" width="32" height="32">
                 <use href="../img/icons.svg#arrow-right"></use>
             </svg>
         </div>
