--- a/src/partials/aboutrest.html
+++ b/src/partials/aboutrest.html
@@ -1,6 +1,6 @@
 <!-- -------About our restaurant------- -->
 <section class="about-rest">
-    <div class="container-about-rest container">
+    <div class="container">
         <h2 class="visually-hidden">About our restaurant</h2>
         <p class="about-pre-title">Amet minim mollit non</p>
         <h3 class="about-title">MIMIHO</h3>
@@ -21,8 +21,7 @@
                                 ../img/aboutrest/restaurant-interior-mob.jpg    1x,
                                 ../img/aboutrest/restaurant-interior-mob-2x.jpg 2x
                               " media="(min-width: 320px)" />
-                <img class="border-one" src="../img/aboutrest/restaurant-interior-mob.jpg" alt="restaurant-interior" width=""
-                    height="">
+                <img class="border-one" src="../img/aboutrest/restaurant-interior-mob.jpg" alt="restaurant-interior">
             </picture>
 
         </div>
@@ -41,8 +40,7 @@
                         ../img/aboutrest/pexels-oruri-jacome-mob-2x.jpg 2x
                       " media="(min-width: 320px)" />
 
-                <img class="border-two" src="../img/aboutrest/pexels-oruri-jacome-mob.jpg" alt="pexels-oruri-jacome" width=""
-                    height="">
+                <img class="border-two" src="../img/aboutrest/pexels-oruri-jacome-mob.jpg" alt="pexels-oruri-jacome">
             </picture>
             <p class="about-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
                 officia
@@ -64,8 +62,7 @@
                                     ../img/aboutrest/pexels-helena-lopes-mob-2x.jpg 2x
                                   " media="(min-width: 320px)" />
 
-                <img class="border-three" src="../img/aboutrest/pexels-helena-lopes-mob.jpg" alt="pexels-helena-lopes" width=""
-                    height="">
+                <img class="border-three" src="../img/aboutrest/pexels-helena-lopes-mob.jpg" alt="pexels-helena-lopes">
             </picture>
             <picture>
                 <source srcset="
@@ -81,14 +78,14 @@
                                                 ../img/aboutrest/pexels-mat-brown-mob-2x.jpg 2x
                                               " media="(min-width: 320px)" />
 
-                <img class="border-four" src="../img/aboutrest/pexels-mat-brown-mob.jpg" alt="pexels-mat-brown" width="" height="">
+                <img class="border-four" src="../img/aboutrest/pexels-mat-brown-mob.jpg" alt="pexels-mat-brown">
             </picture>
         </div>
         <div class="about-arrow">
-            <svg class="about-icon" width="32" height="32">
+            <svg class="about-icon-rest" width="32" height="32">
                 <use href="../img/icons.svg#arrow-left"></use>
             </svg>
-            <svg class="about-icon" width="32" height="32">
+            <svg class="about-icon-rest" width="32" height="32">
                 <use href="../img/icons.svg#arrow-right"></use>
             </svg>
         </div>
